maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (i=0){
       ^RandomMouseMaze:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (i=1){
       ^