maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    var i=random3()
  if (i=0){
    forward()
  }
  if (i=1){
    left()
  }
  else{
    right()
  }
}